--- a/vs/workbench/parts/extensions/electron-browser/media/extensions.css
+++ b/vs/workbench/parts/extensions/electron-browser/media/extensions.css
@@ -155,10 +155,14 @@
 }
 
 .monaco-shell .extensions-statusbar > .icon {
-	background: url('extensions-status.svg') center center no-repeat;
 	background-size: 14px;
 	width: 14px;
 	height: 14px;
+}
+
+.monaco-shell .extensions-statusbar > .icon,
+.monaco-workbench > .activitybar .monaco-action-bar .action-label.extensions {
+	background: url('extensions-status.svg') center center no-repeat;
 }
 
 .monaco-shell .extensions-statusbar.has-updates::after {
@@ -203,7 +207,6 @@
 /* Global action */
 
 .monaco-workbench > .activitybar .monaco-action-bar .action-label.extensions {
-	background: url('extensions-status.svg');
 	background-size: 22px;
 	background-repeat: no-repeat;
 	background-position: 50% !important;
