--- a/vs/workbench/browser/parts/editor/media/titlecontrol.css
+++ b/vs/workbench/browser/parts/editor/media/titlecontrol.css
@@ -5,49 +5,49 @@
 
 /* Editor Label */
 
-.monaco-workbench > .part.editor > .content > .one-editor-container > .title .title-label,
-.monaco-workbench > .part.editor > .content > .one-editor-container > .title .tabs-container > .tab .tab-label {
+.monaco-workbench > .part.editor > .content > .one-editor-silo > .title .title-label,
+.monaco-workbench > .part.editor > .content > .one-editor-silo > .title .tabs-container > .tab .tab-label {
 	white-space: nowrap;
 	flex: 1;
 	font-style: italic;
 }
 
-.monaco-workbench > .part.editor > .content > .one-editor-container > .title.pinned .title-label,
-.monaco-workbench > .part.editor > .content > .one-editor-container > .title .tabs-container > .tab.pinned .tab-label {
+.monaco-workbench > .part.editor > .content > .one-editor-silo > .title.pinned .title-label,
+.monaco-workbench > .part.editor > .content > .one-editor-silo > .title .tabs-container > .tab.pinned .tab-label {
 	font-style: normal;
 }
 
-.monaco-workbench > .part.editor > .content > .one-editor-container > .title .title-label a,
-.monaco-workbench > .part.editor > .content > .one-editor-container > .title .tabs-container > .tab .tab-label a {
+.monaco-workbench > .part.editor > .content > .one-editor-silo > .title .title-label a,
+.monaco-workbench > .part.editor > .content > .one-editor-silo > .title .tabs-container > .tab .tab-label a {
 	text-decoration: none;
 	font-size: 13px;
 	cursor: pointer;
 }
 
-.vs .monaco-workbench > .part.editor > .content > .one-editor-container > .title .title-label a,
-.vs .monaco-workbench > .part.editor > .content > .one-editor-container > .title .tabs-container > .tab .tab-label a {
+.vs .monaco-workbench > .part.editor > .content > .one-editor-silo > .title .title-label a,
+.vs .monaco-workbench > .part.editor > .content > .one-editor-silo > .title .tabs-container > .tab .tab-label a {
 	color: rgba(51, 51, 51, 0.5);
 }
 
-.vs .monaco-workbench > .part.editor > .content > .one-editor-container > .title.active .title-label a,
-.vs .monaco-workbench > .part.editor > .content > .one-editor-container > .title.active .tabs-container > .tab .tab-label a {
+.vs .monaco-workbench > .part.editor > .content > .one-editor-silo > .title.active .title-label a,
+.vs .monaco-workbench > .part.editor > .content > .one-editor-silo > .title.active .tabs-container > .tab .tab-label a {
 	color: #333333;
 }
 
-.vs-dark .monaco-workbench > .part.editor > .content > .one-editor-container > .title .title-label a,
-.vs-dark .monaco-workbench > .part.editor > .content > .one-editor-container > .title .tabs-container > .tab .tab-label a {
+.vs-dark .monaco-workbench > .part.editor > .content > .one-editor-silo > .title .title-label a,
+.vs-dark .monaco-workbench > .part.editor > .content > .one-editor-silo > .title .tabs-container > .tab .tab-label a {
 	color: rgba(255, 255, 255, 0.5);
 }
 
-.vs-dark .monaco-workbench > .part.editor > .content > .one-editor-container > .title.active .title-label a,
-.vs-dark .monaco-workbench > .part.editor > .content > .one-editor-container > .title.active .tabs-container > .tab .tab-label a {
+.vs-dark .monaco-workbench > .part.editor > .content > .one-editor-silo > .title.active .title-label a,
+.vs-dark .monaco-workbench > .part.editor > .content > .one-editor-silo > .title.active .tabs-container > .tab .tab-label a {
 	color: white;
 }
 
 /* Title Actions */
 
-.monaco-workbench > .part.editor > .content > .one-editor-container > .title .title-actions .action-label,
-.monaco-workbench > .part.editor > .content > .one-editor-container > .title .group-actions .action-label {
+.monaco-workbench > .part.editor > .content > .one-editor-silo > .title .title-actions .action-label,
+.monaco-workbench > .part.editor > .content > .one-editor-silo > .title .group-actions .action-label {
 	display: block;
 	height: 35px;
 	line-height: 35px;
@@ -57,29 +57,29 @@
 	background-repeat: no-repeat;
 }
 
-.hc-black .monaco-workbench > .part.editor > .content > .one-editor-container > .title .title-actions .action-label,
-.hc-black .monaco-workbench > .part.editor > .content > .one-editor-container > .title .group-actions .action-label {
+.hc-black .monaco-workbench > .part.editor > .content > .one-editor-silo > .title .title-actions .action-label,
+.hc-black .monaco-workbench > .part.editor > .content > .one-editor-silo > .title .group-actions .action-label {
 	line-height: initial;
 }
 
-.monaco-workbench > .part.editor > .content > .one-editor-container > .title .group-actions .action-label .label,
-.monaco-workbench > .part.editor > .content > .one-editor-container > .title .title-actions .action-label .label {
+.monaco-workbench > .part.editor > .content > .one-editor-silo > .title .group-actions .action-label .label,
+.monaco-workbench > .part.editor > .content > .one-editor-silo > .title .title-actions .action-label .label {
 	display: none;
 }
 
 /* Drag Cursor */
-.monaco-workbench > .part.editor > .content.multiple-editors .one-editor-container > .title,
-.monaco-workbench > .part.editor > .content.multiple-editors .one-editor-container > .title .title-label a,
-.monaco-workbench > .part.editor > .content.multiple-editors .one-editor-container > .title .title-label span {
+.monaco-workbench > .part.editor > .content.multiple-editors .one-editor-silo > .title,
+.monaco-workbench > .part.editor > .content.multiple-editors .one-editor-silo > .title .title-label a,
+.monaco-workbench > .part.editor > .content.multiple-editors .one-editor-silo > .title .title-label span {
 	cursor: -webkit-grab;
 }
 
 #monaco-workbench-editor-move-overlay,
-.monaco-workbench > .part.editor > .content.multiple-editors .one-editor-container.drag,
-.monaco-workbench > .part.editor > .content.multiple-editors .one-editor-container.drag > .title,
-.monaco-workbench > .part.editor > .content.multiple-editors .one-editor-container.drag > .title .title-label a,
-.monaco-workbench > .part.editor > .content.multiple-editors .one-editor-container.drag > .title .title-label span,
-.monaco-workbench > .part.editor > .content.multiple-editors .one-editor-container.drag .monaco-editor .view-lines {
+.monaco-workbench > .part.editor > .content.multiple-editors .one-editor-silo.drag,
+.monaco-workbench > .part.editor > .content.multiple-editors .one-editor-silo.drag > .title,
+.monaco-workbench > .part.editor > .content.multiple-editors .one-editor-silo.drag > .title .title-label a,
+.monaco-workbench > .part.editor > .content.multiple-editors .one-editor-silo.drag > .title .title-label span,
+.monaco-workbench > .part.editor > .content.multiple-editors .one-editor-silo.drag .monaco-editor .view-lines {
 	cursor: -webkit-grabbing;
 }
 
