--- a/vs/workbench/browser/parts/editor/media/sidebyside.css
+++ b/vs/workbench/browser/parts/editor/media/sidebyside.css
@@ -50,76 +50,76 @@
 	border-right: 1px solid #444;
 }
 
-.monaco-workbench > .editor > .content > .one-editor-container {
+.monaco-workbench > .editor > .content > .one-editor-silo {
 	position: absolute;
 	box-sizing:	border-box; /* use border box to be able to draw a border as separator between editors */
 }
 
-.monaco-workbench > .editor > .content > .one-editor-container.editor-left {
+.monaco-workbench > .editor > .content > .one-editor-silo.editor-left {
 	left: 0;
 }
 
-.monaco-workbench > .editor > .content > .one-editor-container.editor-right {
+.monaco-workbench > .editor > .content > .one-editor-silo.editor-right {
 	right: 0;
 }
 
-.monaco-workbench > .editor > .content > .one-editor-container.dragging {
+.monaco-workbench > .editor > .content > .one-editor-silo.dragging {
 	z-index: 2000000;
 }
 
-.monaco-workbench > .editor > .content.dragging > .one-editor-container {
+.monaco-workbench > .editor > .content.dragging > .one-editor-silo {
 	box-sizing: content-box;
 }
 
-.vs .monaco-workbench > .editor > .content.dragging > .one-editor-container.editor-left,
-.vs .monaco-workbench > .editor > .content.dragging > .one-editor-container.editor-center {
+.vs .monaco-workbench > .editor > .content.dragging > .one-editor-silo.editor-left,
+.vs .monaco-workbench > .editor > .content.dragging > .one-editor-silo.editor-center {
 	border-right: 1px solid #E7E7E7;
 }
 
-.vs .monaco-workbench > .editor > .content > .one-editor-container.dragging {
+.vs .monaco-workbench > .editor > .content > .one-editor-silo.dragging {
 	border-left: 1px solid #E7E7E7;
 	border-right: 1px solid #E7E7E7;
 }
 
-.vs .monaco-workbench > .editor > .content > .one-editor-container.editor-center,
-.vs .monaco-workbench > .editor > .content > .one-editor-container.editor-right,
-.vs .monaco-workbench > .editor > .content.dragging > .one-editor-container.editor-right {
+.vs .monaco-workbench > .editor > .content > .one-editor-silo.editor-center,
+.vs .monaco-workbench > .editor > .content > .one-editor-silo.editor-right,
+.vs .monaco-workbench > .editor > .content.dragging > .one-editor-silo.editor-right {
 	border-left: 1px solid #E7E7E7;
 }
 
-.vs-dark .monaco-workbench > .editor > .content.dragging > .one-editor-container.editor-left,
-.vs-dark .monaco-workbench > .editor > .content.dragging > .one-editor-container.editor-center {
+.vs-dark .monaco-workbench > .editor > .content.dragging > .one-editor-silo.editor-left,
+.vs-dark .monaco-workbench > .editor > .content.dragging > .one-editor-silo.editor-center {
 	border-right: 1px solid #444;
 }
 
-.vs-dark .monaco-workbench > .editor > .content > .one-editor-container.dragging {
+.vs-dark .monaco-workbench > .editor > .content > .one-editor-silo.dragging {
 	border-left: 1px solid #444;
 	border-right: 1px solid #444;
 }
 
-.vs-dark .monaco-workbench > .editor > .content > .one-editor-container.editor-center,
-.vs-dark .monaco-workbench > .editor > .content > .one-editor-container.editor-right,
-.vs-dark .monaco-workbench > .editor > .content.dragging > .one-editor-container.editor-right {
+.vs-dark .monaco-workbench > .editor > .content > .one-editor-silo.editor-center,
+.vs-dark .monaco-workbench > .editor > .content > .one-editor-silo.editor-right,
+.vs-dark .monaco-workbench > .editor > .content.dragging > .one-editor-silo.editor-right {
 	border-left: 1px solid #444;
 }
 
-.hc-black .monaco-workbench > .editor > .content.dragging > .one-editor-container.editor-left,
-.hc-black .monaco-workbench > .editor > .content.dragging > .one-editor-container.editor-center {
+.hc-black .monaco-workbench > .editor > .content.dragging > .one-editor-silo.editor-left,
+.hc-black .monaco-workbench > .editor > .content.dragging > .one-editor-silo.editor-center {
 	border-right: 1px solid #6FC3DF;
 }
 
-.hc-black .monaco-workbench > .editor > .content > .one-editor-container.dragging {
+.hc-black .monaco-workbench > .editor > .content > .one-editor-silo.dragging {
 	border-left: 1px solid #6FC3DF;
 	border-right: 1px solid #6FC3DF;
 }
 
-.hc-black .monaco-workbench > .editor > .content > .one-editor-container.editor-center,
-.hc-black .monaco-workbench > .editor > .content > .one-editor-container.editor-right,
-.hc-black .monaco-workbench > .editor > .content.dragging > .one-editor-container.editor-right {
+.hc-black .monaco-workbench > .editor > .content > .one-editor-silo.editor-center,
+.hc-black .monaco-workbench > .editor > .content > .one-editor-silo.editor-right,
+.hc-black .monaco-workbench > .editor > .content.dragging > .one-editor-silo.editor-right {
 	border-left: 1px solid #6FC3DF;
 }
 
-.monaco-workbench > .editor > .content > .one-editor-container.draggedunder {
+.monaco-workbench > .editor > .content > .one-editor-silo.draggedunder {
 	transition: left 200ms ease-out;
 }
 
