--- a/vs/workbench/browser/media/part.css
+++ b/vs/workbench/browser/media/part.css
@@ -10,7 +10,7 @@
 /* title styles are defined for two classes because the editor puts the title into the content */
 
 .monaco-workbench > .part > .title,
-.monaco-workbench > .part.editor > .content > .one-editor-silo > .title {
+.monaco-workbench > .part.editor > .content > .one-editor-silo > .container > .title {
 	height: 35px;
 	display: flex;
 	box-sizing:	border-box;
