--- a/vs/workbench/browser/parts/editor/media/sidebyside.css
+++ b/vs/workbench/browser/parts/editor/media/sidebyside.css
@@ -127,6 +127,6 @@
 	transition-property: right;
 }
 
-.monaco-workbench > .editor > .content .editor-container {
+.monaco-workbench > .editor > .content > .one-editor-silo > .container > .editor-container {
 	height: calc(100% - 35px); /* Editor is below editor title */
 }
