[Regression 1.3] Command palette no longer mouse-accessible (fixes #8913)

--- a/vs/workbench/browser/parts/editor/media/titlecontrol.css
+++ b/vs/workbench/browser/parts/editor/media/titlecontrol.css
@@ -24,6 +24,10 @@
 	cursor: pointer;
 }
 
+.monaco-workbench > .part.editor > .content > .one-editor-silo > .container > .title .title-label span {
+	cursor: pointer;
+}
+
 .vs .monaco-workbench > .part.editor > .content > .one-editor-silo > .container > .title .title-label a,
 .vs .monaco-workbench > .part.editor > .content > .one-editor-silo > .container > .title .tabs-container > .tab .tab-label a {
 	color: rgba(51, 51, 51, 0.5);
