Several CJK strings on the UI are very difficult to read on standard definition monitors due to font weight and size (fixes #8653)

--- a/vs/base/browser/ui/splitview/splitview.css
+++ b/vs/base/browser/ui/splitview/splitview.css
@@ -31,6 +31,12 @@
 	display: flex;
 }
 
+/* Bold font style does not go well with CJK fonts */
+.monaco-split-view:lang(zh-Hans) > .split-view-view > .header,
+.monaco-split-view:lang(zh-Hant) > .split-view-view > .header,
+.monaco-split-view:lang(ja) > .split-view-view > .header,
+.monaco-split-view:lang(ko) > .split-view-view > .header { font-weight: normal; }
+
 .monaco-split-view > .split-view-view > .header.collapsible {
 	cursor: pointer;
 }
