prevent bad cursor on scrollbar in tabs container

--- a/vs/workbench/browser/parts/editor/media/tabstitle.css
+++ b/vs/workbench/browser/parts/editor/media/tabstitle.css
@@ -36,6 +36,7 @@
 
 .monaco-workbench > .part.editor > .content > .one-editor-silo > .container > .title.tabs > .monaco-scrollable-element .scrollbar {
 	z-index: 3; /* on top of tabs */
+	cursor: default;
 }
 
 /* Tabs Container */
