--- a/vs/workbench/browser/parts/editor/media/titlecontrol.css
+++ b/vs/workbench/browser/parts/editor/media/titlecontrol.css
@@ -51,7 +51,7 @@
 /* Title Actions */
 
 .monaco-workbench > .part.editor > .content > .one-editor-silo > .container > .title .title-actions .action-label,
-.monaco-workbench > .part.editor > .content > .one-editor-silo > .container > .title .group-actions .action-label {
+.monaco-workbench > .part.editor > .content > .one-editor-silo > .container > .title .editor-actions .action-label {
 	display: block;
 	height: 35px;
 	line-height: 35px;
@@ -62,11 +62,11 @@
 }
 
 .hc-black .monaco-workbench > .part.editor > .content > .one-editor-silo > .container > .title .title-actions .action-label,
-.hc-black .monaco-workbench > .part.editor > .content > .one-editor-silo > .container > .title .group-actions .action-label {
+.hc-black .monaco-workbench > .part.editor > .content > .one-editor-silo > .container > .title .editor-actions .action-label {
 	line-height: initial;
 }
 
-.monaco-workbench > .part.editor > .content > .one-editor-silo > .container > .title .group-actions .action-label .label,
+.monaco-workbench > .part.editor > .content > .one-editor-silo > .container > .title .editor-actions .action-label .label,
 .monaco-workbench > .part.editor > .content > .one-editor-silo > .container > .title .title-actions .action-label .label {
 	display: none;
 }
