Allow focus to escape the integrated terminal
When ctrl+m is pressed (only use default keybinding for now), tab will not be
passed to the pty and instead will propogate up and shift focus.

Part of #6731

--- a/vs/workbench/parts/terminal/electron-browser/media/xterm.css
+++ b/vs/workbench/parts/terminal/electron-browser/media/xterm.css
@@ -16,7 +16,8 @@
 	position: relative;
 }
 
-.monaco-workbench .panel.integrated-terminal .xterm.focus {
+.monaco-workbench .panel.integrated-terminal .xterm:focus {
+	/* Hide outline when focus jumps from xterm to the text area */
 	outline: none;
 }
 
